<resources>
    <string name="app_name">SettingTools</string>
    <string name="title_install_apk_by_shizuku">使用Shizuku安装应用</string>
    <string name="title_samsung_refresh_rate_mode">三星屏幕刷新率\n(档位：10,24,30,48,60,96,120)</string>
    <string name="title_samsung_refresh_rate_mode_standard">标准</string>
    <string name="title_samsung_refresh_rate_mode_auto">自适应</string>
    <string name="select_apk">选择安装包</string>
    <string name="title_min_refresh_rate_enable">开启最低刷新率（默认关闭）</string>
    <string name="title_max_refresh_rate_enable">开启最高刷新率（默认关闭）</string>
    <string name="title_min_refresh_rate">最低刷新率：%dHz\n（默认60Hz）</string>
    <string name="title_max_refresh_rate">最高刷新率：%dHz\n（默认60Hz）</string>
    <string name="title_change_resolution">修改分辨率</string>
    <string name="save">保存</string>
    <string name="reset">重置</string>
    <string name="width">宽度</string>
    <string name="height">高度</string>
    <string name="density">像素密度</string>
    <string name="toast_shizuku_permission_denied">Shizuku授权失败！</string>
    <string name="toast_need_shizuku_because_of_android_14">由于Android14限制，需要安装激活Shizuku才能安装此插件！</string>
    <string name="toast_please_install_and_launch_shizuku">请安装Shizuku并启动后再执行！</string>
    <string name="toast_permission_granted">已授权</string>
    <string name="toast_permission_grant_succeed">授权成功！</string>
    <string name="toast_permission_grant_failed">授权失败！</string>
    <string name="toast_input_resolution_invalid">分辨率格式不正确！</string>
    <string name="toast_width_resolution_should_greater_than">宽度应当大于%d！</string>
    <string name="toast_height_resolution_should_greater_than">高度应当大于%d！</string>
    <string name="toast_density_resolution_should_between">像素密度应该在%d~%d！</string>
    <string name="apk_is_not_selected">未选择安装包！</string>
    <string name="installing">正在安装……</string>
    <string name="install_succeed">安装成功</string>
    <string name="install_failed">安装失败</string>
    <string name="dialog_install_plugin_message">需要安装插件才能修改此设置！</string>
    <string name="install">安装</string>
    <string name="cancel">取消</string>
</resources>