<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <RelativeLayout style="@style/ItemHeight">

            <TextView
                android:id="@+id/tv_install_apk"
                style="@style/Title"
                android:layout_centerVertical="true"
                android:gravity="center"
                android:text="@string/title_install_apk_by_shizuku" />

            <Button
                android:id="@+id/btn_select_apk"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:text="@string/select_apk" />
        </RelativeLayout>

        <com.magicianguo.settingtools.view.SamsungRefreshRateModePanel
            android:id="@+id/rl_samsung_refresh_rate_mode"
            style="@style/ItemHeight"
            android:visibility="gone"
            tools:visibility="visible">

            <TextView
                android:id="@+id/tv_samsung_refresh_rate_mode"
                style="@style/Title"
                android:layout_centerVertical="true"
                android:text="@string/title_samsung_refresh_rate_mode" />

            <RadioGroup
                android:id="@+id/rg_samsung_refresh_rate_mode"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:orientation="horizontal">
                <RadioButton
                    android:id="@+id/rb_samsung_rate_mode_standard"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/title_samsung_refresh_rate_mode_standard" />
                <RadioButton
                    android:id="@+id/rb_samsung_rate_mode_auto"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/title_samsung_refresh_rate_mode_auto" />
            </RadioGroup>
        </com.magicianguo.settingtools.view.SamsungRefreshRateModePanel>

        <com.magicianguo.settingtools.view.RefreshRatePanel
            android:id="@+id/ll_refresh_rate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RelativeLayout style="@style/ItemHeight">

                <TextView
                    android:id="@+id/tv_min_refresh_enable"
                    style="@style/Title"
                    android:layout_centerVertical="true"
                    android:gravity="center"
                    android:text="@string/title_min_refresh_rate_enable" />

                <androidx.appcompat.widget.SwitchCompat
                    android:id="@+id/sw_min_refresh_enable"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true" />
            </RelativeLayout>

            <RelativeLayout style="@style/ItemHeight">

                <TextView
                    android:id="@+id/tv_min_refresh_rate"
                    style="@style/Title"
                    android:layout_centerVertical="true"
                    android:gravity="center"
                    android:text="@string/title_min_refresh_rate" />

                <androidx.appcompat.widget.AppCompatSeekBar
                    android:id="@+id/sb_min_refresh_rate"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="150dp"
                    android:max="100" />
            </RelativeLayout>

            <RelativeLayout style="@style/ItemHeight">

                <TextView
                    android:id="@+id/tv_max_refresh_enable"
                    style="@style/Title"
                    android:layout_centerVertical="true"
                    android:gravity="center"
                    android:text="@string/title_max_refresh_rate_enable" />

                <androidx.appcompat.widget.SwitchCompat
                    android:id="@+id/sw_max_refresh_enable"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true" />
            </RelativeLayout>

            <RelativeLayout style="@style/ItemHeight">

                <TextView
                    android:id="@+id/tv_max_refresh_rate"
                    style="@style/Title"
                    android:layout_centerVertical="true"
                    android:gravity="center"
                    android:text="@string/title_max_refresh_rate" />

                <androidx.appcompat.widget.AppCompatSeekBar
                    android:id="@+id/sb_max_refresh_rate"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="150dp"
                    android:max="100" />
            </RelativeLayout>
        </com.magicianguo.settingtools.view.RefreshRatePanel>
    </LinearLayout>
</androidx.core.widget.NestedScrollView>